tests/compile-fail/unaligned_pointers/intptrcast_alignment_check.stderr
error: Undefined Behavior: accessing memory with alignment 1, but alignment 2 is required
  --> $DIR/intptrcast_alignment_check.rs:15:14
   |
15 |     unsafe { *u16_ptr = 2; } //~ERROR memory with alignment 1, but alignment 2 is required
   |              ^^^^^^^^^^^^ accessing memory with alignment 1, but alignment 2 is required
   |
   = help: this usually indicates that your program performed an invalid operation and caused Undefined Behavior
   = help: but due to `-Zmiri-symbolic-alignment-check`, alignment errors can also be false positives
           
   = note: inside `main` at $DIR/intptrcast_alignment_check.rs:15:14

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

